--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,17 @@ body {
     flex: 1;
 }
 
+.headerLogo {
+  font-size: 24px;
+}
+
 .headerLink {
-    font-size: 18px;
     list-style-type: none;
     margin: auto;
+    padding-bottom: 7%;
     display: flex;
     justify-content: flex-end;
-    gap: 20px;
+    gap: 5%;
 }
 
 
@@ -38,28 +42,26 @@ button {
 .top {
     background-color: #1F2937;
     color: #F9FAF8;
-    display: flex;
+    font-size: 18px;
     padding-left: 10%;
     padding-right: 10%;
     padding-bottom: 5%;
     padding-top: 10px;
+    display: flex;
+    gap: 5%;
+}
+
+.mainText {
+  font-size: 48px;
+  font-weight: bold;
 }
 
 .topLeft {
-  padding-right: 10%;
-}
-
-.headerLogo {
-  padding-bottom: 10%;
+  flex: 1;
 }
 
 .topRight {
-  margin: auto;
-  flex: 1 1 75%;
-}
-
-.headerLink {
-  padding-bottom: 10%;
+  flex: 1;
 }
 
 .middle1 {
@@ -67,6 +69,8 @@ button {
 }
 
 .info {
+  font-size: 36px;
+  color: #1F2937;
   display: flex;
   justify-content: center;
 }
@@ -77,8 +81,17 @@ button {
   padding: 5%;
 }
 
+.cards, img {
+  height: 75%;
+  width: 90%;
+  gap: 5%;
+}
+
 .middle2 {
     background-color: #E5E7EB;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
     padding: 10%;
 }
 
